# terminal-tc

./: .gitignore  CLAUDE.md  README.md  artnet_timecode.py  config.py  pyproject.toml  requirements.txt  tui_app.py
terminal_tc/: __init__.py  __main__.py  artnet_timecode.py  config.py  marker_gen.py  osc_server.py  project.py  tui_app.py
tests/: test_marker_gen.py
