[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terminal-tc"
version = "0.1.0"
description = "Art-Net SMPTE timecode player with Textual TUI"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "textual>=0.47",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "numpy>=1.24",
    "timecode>=1.3",
    "psutil>=5.9",
]

[project.scripts]
artnet-timecode = "terminal_tc.artnet_timecode:main"

[tool.hatch.build.targets.wheel]
packages = ["terminal_tc"]
